integration_tests/juniper_tests/fail/input-object/derive_no_underscore.rs
#[derive(juniper::GraphQLInputObject)]
struct Object {
    __field: String,
}

fn main() {}
